--- a/app/community_views/layouts/mailer.html.liquid
+++ b/app/community_views/layouts/mailer.html.liquid
@@ -343,6 +343,8 @@
               <tr>
                 <td>
                   {{ content_for_layout }}
+                  <br/>
+                  <p><a href="https://devmesh.intel.com">The Intel Developer Mesh Team</a></p>
                 </td>
               </tr>
             </table>
@@ -360,7 +362,10 @@
             <table border="0" cellpadding="0" cellspacing="0">
               <tr>
                 <td align="center" valign="top">
-                  <p>Social: <a href="#">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="#">Facebook</a>&nbsp;&nbsp;&nbsp;<a href="#">Forward to Friend</a></p>
+                  <p>Intel is committed to protecting your privacy. For more information about Intel's
+                    Privacy Notice, please visit Intel privacy or write to Intel Corporation, ATTN Privacy,
+                    Mailstop RNB4-145, 2200 Mission College Blvd., Santa Clara, CA 95054 USA.
+                  </p>
                 </td>
               </tr>
               <tr>
