--- a/app/views/project_mailer/collaborator_has_quit.text.liquid
+++ b/app/views/project_mailer/collaborator_has_quit.text.liquid
@@ -1,4 +1,4 @@
-Hello, {{ owner.first_name }}
+Hi, {{ owner.first_name }}
 
-{{ user.first_name }} {{ user.profile_url }} decided to be no longer a collaborator of {{ project.name }} {{ project.show_url }}
+{{ user.first_name }} {{ user.profile_url }} decided to be no longer a collaborator on {{ project.name }} {{ project.show_url }}
 
