--- a/app/views/project_mailer/project_owner_added_collaborator_email.text.liquid
+++ b/app/views/project_mailer/project_owner_added_collaborator_email.text.liquid
@@ -1,5 +1,7 @@
-Hello, {{ user.first_name }}
+Hi {{ user.first_name }},
 
-{{ owner.first_name }} ({{ owner.profile_url }}) has added you to collaborator list for project called {{ project.name }} ({{ project.show_url }})
-If you believe you were added by mistake, you can remove yourself from collaborators list at {{ project.edit_url }}
+{{ owner.name }} ({{ owner.profile_url }})  has invited you to become a collaborator on {{ project.name }} ({{ project.show_url }}).
+Learn more about the project.
+
+Accept | Decline invitation ({{ user.projects_profile_url_with_token }})
 
