--- a/app/community_views/dashboard/project_collaborators/_project_collaborator.html.haml
+++ b/app/community_views/dashboard/project_collaborators/_project_collaborator.html.haml
@@ -7,7 +7,7 @@
       =t('approved')
 
   %td
-    - if project_collaborator.pending?
+    - unless project_collaborator.approved_by_owner?
       %button.button-a.small.action--approve{"data-project-collaborator": project_collaborator.id, "data-action": 'PUT'}
         %span.intelicon-check
         = t :approve
