--- a/app/community_views/shared/_show_projects.html.haml
+++ b/app/community_views/shared/_show_projects.html.haml
@@ -1,3 +1,4 @@
-= render 'shared/sort_form', form_url: see_more_route, sort_options: Project::SORT_OPTIONS, container: container
+- sort_options ||= Project::SORT_OPTIONS
+= render 'shared/sort_form', form_url: see_more_route, sort_options: sort_options, container: container
 
 = render 'shared/listing_projects', projects: projects, see_more_type: "projects", see_more_route: see_more_route
