--- a/app/views/project_mailer/collaborator_approved.html.liquid
+++ b/app/views/project_mailer/collaborator_approved.html.liquid
@@ -1,4 +1,3 @@
-<h1>Hello, {{ user.first_name }}</h1>
-
-<p><a href="{{ owner.profile_url }}">{{ owner.first_name }}</a> has accepted your request to become collaborator of <a href="{{ project.show_url }}">{{ project.name }}</a>
-
+<h1>Hi {{ user.first_name }},</h1>
+<p><a href="{{ owner.profile_url }}">{{ owner.name }}</a> has approved you as a collaborator on <a href="{{ project.show_url }}">{{ project.name }}</a>.</p>
+<p>Don't forget to follow the project to stay up-to-date with the latest developments.</p>
