--- a/app/views/project_mailer/collaborator_approved.text.liquid
+++ b/app/views/project_mailer/collaborator_approved.text.liquid
@@ -1,4 +1,4 @@
-Hello, {{ user.first_name }}
+Hi, {{ user.first_name }}
 
-{{ owner.first_name }} {{ owner.profile_url }} has accepted your request to become collaborator of {{ project.name }} {{ project.show_url }}
-
+{{ owner.first_name }} ({{ owner.profile_url }}) has approved you as a collaborator on {{ project.name }} ({{ project.show_url }})
+Don't forget to follow the project to stay up-to-date with the latest developments.
