--- a/app/views/project_mailer/collaborator_declined.html.liquid
+++ b/app/views/project_mailer/collaborator_declined.html.liquid
@@ -1,4 +1,4 @@
-<h1>Hello, {{ user.first_name }}</h1>
+<h1>Hi {{ user.first_name }},</h1>
 
-<p>Unfortunately, <a href="{{ owner.profile_url }}">{{ owner.first_name }}</a> has declined your request to become collaborator of <a href="{{ project.show_url }}">{{ project.name }}</a>
-
+<p><a href="{{ owner.profile_url }}">{{ owner.name }}</a> has declined your request to collaborate on <a href="{{ project.show_url }}">{{ project.name }}</a>, but thanks you for your offer.</p>
+<p>You're welcome to follow the project and keep track of new developments.</p>
