--- a/app/views/project_mailer/collaborator_declined.text.liquid
+++ b/app/views/project_mailer/collaborator_declined.text.liquid
@@ -1,4 +1,4 @@
-Hello, {{ user.first_name }}
+Hi {{ user.first_name }},
 
-Unfortunately, {{ owner.first_name }} {{ owner.profile_url }} has declined your request to become collaborator of {{ project.name }} {{ project.show_url }}
-
+{{ owner.name }} ({{ owner.profile_url }}) has declined your request to collaborate on {{ project.name }} ({{ project.show_url }}), but thanks you for your offer.
+You're welcome to follow the project and keep track of new developments.
