--- a/app/views/project_mailer/pending_approval.html.liquid
+++ b/app/views/project_mailer/pending_approval.html.liquid
@@ -1,5 +1,5 @@
-<h1>Hello, {{ owner.first_name }}</h1>
+<h1>Hi {{ owner.first_name }},</h1>
 
-<p><a href="{{ user.profile_url }}">{{ user.first_name }}</a> requested to become a collaborator of <a href="{{ project.show_url }}">{{ project.name }}</a>
-<p>You can approve or decline request at <a href="{{ project.edit_url }}">edit project page</a>
-
+<p><a href="{{ enquirer.profile_url }}">{{ enquirer.name }}</a> would like join your project, <a href="{{ project.show_url }}">{{ project.name }}</a>.
+<p>Check out their profile and see what you think. They might just be what you're looking for.</p>
+<p><a href="{{ project.edit_url_with_token }}">Approve | Decline collaborator</a></p>
