--- a/app/views/project_mailer/pending_approval.text.liquid
+++ b/app/views/project_mailer/pending_approval.text.liquid
@@ -1,5 +1,5 @@
-Hello, {{ owner.first_name }}
+Hi {{ owner.first_name }},
 
-{{ user.first_name }} {{ user.profile_url }} requested to become a collaborator of {{ project.name }} {{ project.show_url }}
-You can approve or decline request at edit project page {{ project.edit_url }}
-
+{{ enquirer.name }} ({{ enquirer.profile_url }}) would like join your project, {{ project.name }} ({{ project.show_url }}).
+Check out their profile and see what you think. They might just be what you're looking for.
+Approve | Decline ({{ project.edit_url_with_token }}) collaborator
