--- a/app/views/home/_search_box.liquid
+++ b/app/views/home/_search_box.liquid
@@ -76,7 +76,7 @@
           </div>
         </div>
 
-        {% if transactable_types.size > 1 && platform_context.tt_select_type == 'radio' %}
+        {% if transactable_types.size > 1 and platform_context.tt_select_type == 'radio' %}
           <div class="row-fluid">
             <div class="span10">
               <div class="search-transactable--radio">
