--- a/app/views/layouts/_list_your_bookable.html.haml
+++ b/app/views/layouts/_list_your_bookable.html.haml
@@ -2,17 +2,17 @@
   - if platform_context.single_type?
     - if current_user.nil?
       = link_to_registration({return_to: transactable_type.wizard_path}, platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal' }, class: 'nav-link btn btn-blue btn-medium') do
-        %span.text= t('ui.header.list_your_thing', thing: transactable_type.translated_bookable_noun)
+        %span= t('ui.header.list_your_thing', thing: transactable_type.translated_bookable_noun)
         %span.icon.ico-plus
     - else
       = link_to transactable_type.wizard_path, :class => "nav-link btn btn-blue btn-medium" do
-        %span.text= t('ui.header.list_your_thing', thing: transactable_type.translated_bookable_noun)
+        %span= t('ui.header.list_your_thing', thing: transactable_type.translated_bookable_noun)
         %span.icon.ico-plus
   - else
     - if current_user.nil?
       = link_to_registration({return_to: transactable_type.wizard_path}, platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal' }, class: 'nav-link dropdown-toggle') do
-        %span.text= transactable_type.translated_bookable_noun
+        %span= transactable_type.translated_bookable_noun
     - else
       - if transactable_type.respond_to?(:wizard_path)
         = link_to transactable_type.wizard_path, :class => "nav-link dropdown-toggle" do
-          %span.text= transactable_type.translated_bookable_noun
+          %span= transactable_type.translated_bookable_noun
