NM-3059 Position of modal is now fixed rather than relative / breaking on scroll

--- a/app/assets/stylesheets/components/_sticky_footer.css.scss
+++ b/app/assets/stylesheets/components/_sticky_footer.css.scss
@@ -10,6 +10,10 @@ html, body {
   height: auto;
 }
 
+.dnm-page-body.modal-body-wrapper {
+    position: fixed;
+}
+
 .content-wrapper {
   min-height: 100%;
   height: auto;
