--- a/app/views/instance_admin/settings/configuration/show.html.haml
+++ b/app/views/instance_admin/settings/configuration/show.html.haml
@@ -34,6 +34,8 @@
     .row
       .input-container.col-xs-6
         = f.input :custom_waiver_agreements, as: :boolean, inline_label: true
+      .input-container.col-xs-6
+        = f.input :time_zone, input_html: { class: 'selectpicker', "data-live-search" => "true" }
 
   .content-container
     %h4
