NM-2827 - Add ability to track GA on community / staging

--- a/app/community_views/layouts/community.html.haml
+++ b/app/community_views/layouts/community.html.haml
@@ -27,4 +27,5 @@
 
     = render 'shared/components/modal'
     = javascript_include_tag 'community'
+    = render 'layouts/analytics'
     = yield :page_scripts
