--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -1,11 +1,11 @@
-// Google analytics
+- if %w(staging production).include?(Rails.env)
+  // Google analytics
 
-// there are two analytics - one in open beta. To not lose anything, we will leave the old one alone and create a new production environment.
-// this is also the recommended approach. Once everything will be working, we can remove the old way of tracking via ga.js script in favor of analytics.js
+  // there are two analytics - one in open beta. To not lose anything, we will leave the old one alone and create a new production environment.
+  // this is also the recommended approach. Once everything will be working, we can remove the old way of tracking via ga.js script in favor of analytics.js
 
-// the old way via ga.js
-- tracking_code = PlatformContext.current.domain.try(:google_analytics_tracking_code).presence || DesksnearMe::Application.config.google_analytics[:tracking_code]
-- if Rails.env.production? && tracking_code.present?
+  // the old way via ga.js
+  - tracking_code = PlatformContext.current.domain.try(:google_analytics_tracking_code).presence || DesksnearMe::Application.config.google_analytics[:tracking_code].to_s
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
