--- a/app/views/dashboard/base/_shipping_profiles_list.html.haml
+++ b/app/views/dashboard/base/_shipping_profiles_list.html.haml
@@ -1,1 +1,1 @@
-= f.input :shipping_category_id, as: :radio_buttons, collection: collection_for_shipping_profiles_radio_buttons(f.object), :label_method => :last, :value_method => :first
+= f.input :shipping_category_id, as: :radio_buttons, checked: f.object.shipping_category_id || f.object.try{ |o| o.all_shipping_categories.last.try(:id) }, collection: collection_for_shipping_profiles_radio_buttons(f.object), :label_method => :last, :value_method => :first
