--- a/app/views/instance_admin/manage/payments/index.html.haml
+++ b/app/views/instance_admin/manage/payments/index.html.haml
@@ -1,12 +1,14 @@
 .content-container
   %h4
     = t("instance_admin.manage.payments.resource.plural.#{resource_class.name.underscore}")
-  
   .row
     .text-container
-      = t('instance_admin.manage.payments.here_you_can_see_all_payments')
-      #{I18n.l(PaymentTransfers::SchedulerMethods.new(platform_context.instance).next_payment_transfers_date, format: :long)}
-  
+      - if current_instance.manual_transfers?
+        = t('instance_admin.manage.payments.here_you_can_see_all_payments_manual')
+      - else
+        = t('instance_admin.manage.payments.here_you_can_see_all_payments')
+        #{I18n.l(PaymentTransfers::SchedulerMethods.new(platform_context.instance).next_payment_transfers_date, format: :long)}
+    
   = render 'list_table'
 
 .row
