--- a/app/views/locations/_twitter_social_button.html.liquid
+++ b/app/views/locations/_twitter_social_button.html.liquid
@@ -1,3 +1,3 @@
-<a href="https://twitter.com/share" class="twitter-share-button" data-text="{{ location.name }}" data-url="{{ location.full_url }}">
+<a href="https://twitter.com/share" class="twitter-share-button" data-text="{{ location.name }}" data-url="{{ location.tweet_button_url }}">
   Tweet
 </a>
