--- a/app/views/instance_admin/settings/payments/index.html.haml
+++ b/app/views/instance_admin/settings/payments/index.html.haml
@@ -16,8 +16,8 @@
         = f.input :payment_transfers_frequency, collection: PaymentTransfer::FREQUENCIES.collect { |f| [t(".#{f}"), f] }, input_html: { class: 'form-control' }, prompt: true
     .row
       .input-container.col-xs-12
-        = f.button :submit, t('instance_admin.save'), class: 'btn btn-light pull-right'
-        = link_to t('instance_admin.transfer_list'), instance_admin_manage_transfers_path, class: 'btn btn-blue pull-right'
+        = f.button :submit, t('instance_admin.save'), class: 'btn btn-blue pull-right'
+        = link_to t('instance_admin.transfer_list'), instance_admin_manage_transfers_path, class: 'btn btn-light pull-right'
 
 .content-container
   %h4
