--- a/app/community_views/comments/_activity_feed_comment.html.haml
+++ b/app/community_views/comments/_activity_feed_comment.html.haml
@@ -6,7 +6,7 @@
   %blockquote
     %p= readmore(comment.body)
   %p.meta
-    %time{datetime: comment.created_at.strftime('%Y-%m-%d %H:%M')}= I18n.l(comment.created_at, format: :date_time)
+    %time{datetime: comment.created_at.strftime('%Y-%m-%d %H:%M')}= I18n.l(comment.created_at, format: :full_date)
     %span &bull;
     - if report = comment.reported_by(current_user, request.remote_ip)
       = link_to t(:cancel_spam_report), url_for([comment.commentable, comment, report]), remote: true, method: :delete
