--- a/app/views/dashboard/notification_preferences/edit.html.haml
+++ b/app/views/dashboard/notification_preferences/edit.html.haml
@@ -5,8 +5,10 @@
     %p= t('dashboard.nav.notification_preferences')
   .dash-body
     = simple_form_for @user, url: dashboard_notification_preferences_path, wrapper: :bs3, method: :put, html: { multipart: true, id: 'edit_notification_preferences' } do |f|
-      = f.input :accept_emails, as: :bootstrap_switch
-      = f.input :sms_notifications_enabled, as: :bootstrap_switch
+      - if HiddenUiControls.find('dashboard/notification_preferences/emails').visible?
+        = f.input :accept_emails, as: :bootstrap_switch
+      - if HiddenUiControls.find('dashboard/notification_preferences/sms').visible?
+        = f.input :sms_notifications_enabled, as: :bootstrap_switch
 
       .submit-bar
         = f.submit "Save", class: "btn medium blue"
