--- a/app/community_views/shared/_follow_button.html.haml
+++ b/app/community_views/shared/_follow_button.html.haml
@@ -1,4 +1,4 @@
-- if current_user != object
+- if current_user != object && current_user != object.try(:creator)
   - css_class ||= "small"
   - global_options = { class: "button-a #{css_class}" }
   - if user_signed_in?
