--- a/app/assets/stylesheets/intel/modules/_forms.scss
+++ b/app/assets/stylesheets/intel/modules/_forms.scss
@@ -31,6 +31,10 @@
             margin: 0 0 0 -200px;
             font-size: 20px;
             line-height: 1.6;
+
+            abbr {
+                color: #f00;
+            }
         }
 
         fieldset {
