--- a/app/community_views/search/filters/_people.html.haml
+++ b/app/community_views/search/filters/_people.html.haml
@@ -3,9 +3,9 @@
     .box
       %h3.hx
         = t :filter_by
-      = f.input :role, as: :select, multiple: true, input_html: { class: 'selectize', multiple: true }, collection: CustomAttributes::CustomAttribute.where(target: InstanceProfileType.first, name: 'role').first.try(:valid_values_translated), wrapper_html: { class: 'drop role' }, required: false, selected: params[:role]
+      = f.input :role, as: :select, multiple: true, input_html: { class: 'selectize', multiple: true }, collection: CustomAttributes::CustomAttribute.where(target: InstanceProfileType.first, name: 'role').first.try(:valid_values_translated), wrapper_html: { class: 'drop role' }, required: false, selected: params[:role], placeholder: t('simple_form.placeholders.defaults.role')
 
-      = f.input :topic_ids, as: :select, multiple: true, input_html: { class: 'selectize', multiple: true }, collection: Topic.pluck(:name, :id), wrapper_html: { class: 'drop topics' }, required: false, selected: params[:topic_ids]
+      = f.input :topic_ids, as: :select, multiple: true, input_html: { class: 'selectize', multiple: true }, collection: Topic.pluck(:name, :id), wrapper_html: { class: 'drop topics' }, required: false, selected: params[:topic_ids], placeholder: t('simple_form.placeholders.defaults.topic_ids')
       = f.input :query, as: :hidden, input_html: { value: params[:query] }
       = f.input :page, as: :hidden, input_html: { value: params[:page] }
       = f.input :search_type, as: :hidden, input_html: { value: 'people' }
