NM-3121 - Adding spam reports feature

--- a/app/assets/stylesheets/instance_admin.css.scss
+++ b/app/assets/stylesheets/instance_admin.css.scss
@@ -35,6 +35,7 @@
 @import "instance_admin/data_tables/dataTables.bootstrap";
 @import "instance_admin/shipping_profiles";
 @import "instance_admin/theme/file_uploads";
+@import "instance_admin/spam_reports";
 @import "sections/schedule";
 @import "instance_admin/search_types";
 @import "instance_admin/bootstrap-colorpicker";
