--- a/app/assets/stylesheets/instance_admin/users.css.scss
+++ b/app/assets/stylesheets/instance_admin/users.css.scss
@@ -1,5 +1,6 @@
 #main-container.users,
-#main-container.projects
+#main-container.projects,
+#main-container.spam_reports
 {
   .fa {
     margin: 0;
