--- a/app/views/instance_admin/settings/certificate_requests/new.html.haml
+++ b/app/views/instance_admin/settings/certificate_requests/new.html.haml
@@ -18,7 +18,7 @@
         = f.input :department, as: :string, placeholder: "IT Department", input_html: { class: 'form-control' }
     .row
       .input-container.col-xs-12
-        = f.input :common_name, label: "Common name (Fully Qualified Domain Name)", as: :string, placeholder: "www.example.com", input_html: { class: 'form-control' }
+        = f.input :common_name, label: "Common name (Fully Qualified Domain Name)", as: :string, placeholder: "*.example.com", input_html: { class: 'form-control' }
     .row
       .input-container.col-xs-12
         = f.input :email, as: :email, placeholder: "admin@example.com", input_html: { class: 'form-control' }
