NM-3116 time zone upgrade

--- a/app/assets/stylesheets/components/_datepicker.css.scss
+++ b/app/assets/stylesheets/components/_datepicker.css.scss
@@ -104,6 +104,7 @@
 
   .datepicker-text-fadein {
     background-color: $gray240;
+    padding: 0 5px;
     -webkit-animation-name: opacity-fadein;
        -moz-animation-name: opacity-fadein;
             animation-name: opacity-fadein;
