--- a/app/views/instance_admin/manage/service_types/_form.html.haml
+++ b/app/views/instance_admin/manage/service_types/_form.html.haml
@@ -67,6 +67,9 @@
     .row
       .input-container.col-xs-12
         = f.input :minimum_booking_minutes, required: false, input_html: { class: 'form-control' }
+    .row
+      .input-container.col-xs-12
+        = f.input :timezone_rule, collection: {'Location' => 'location', "Buyer Time Zone" => 'buyer', 'Seller Time Zone' => 'seller', 'Dafault Time Zone' => 'instance'}, required: false, input_html: { class: 'form-control' }, include_blank: false
 
   .content-container
     %h4= t('instance_admin.manage.service_types.pricing')
