--- a/app/views/instance_admin/data_uploads/base/index.html.haml
+++ b/app/views/instance_admin/data_uploads/base/index.html.haml
@@ -20,7 +20,7 @@
               - if params[:service_type_id].present?
                 %td= link_to resource.xml_file_identifier, resource.xml_file.try(:url), target: :blank if resource.xml_file.present?
               %td= resource.imported_at
-              %td= resource.uploader.email
+              %td= resource.uploader.present? ? resource.uploader.email : ''
               %td= l(resource.created_at, format: :long)
   .row
     .text-container
