--- a/app/views/instance_admin/manage/service_types/_form.html.haml
+++ b/app/views/instance_admin/manage/service_types/_form.html.haml
@@ -70,11 +70,11 @@
 
   .content-container
     %h4= t('instance_admin.manage.service_types.pricing')
-    - %w(hourly daily weekly monthly free).each do |price|
+    - %w(hourly daily weekly monthly free weekly_subscription monthly_subscription).each do |price|
       .row
         .input-container.col-xs-4
           = f.input :"action_#{price}_booking", as: :boolean, label: t("instance_admin.manage.service_types.pricing_types.#{price}"), :inline_label => true
-        - unless price == 'free'
+        - unless %w(weekly_subscription monthly_subscription free).include? price
           .input-container.col-xs-4
             = f.input :"min_#{price}_price", input_html: { class: 'form-control' }
           .input-container.col-xs-4
@@ -89,10 +89,6 @@
         = f.input :action_exclusive_price, as: :boolean, :inline_label => true
       .input-container.col-xs-4
         = f.input :action_price_per_unit, as: :boolean, :inline_label => true
-    .row
-      .input-container.col-xs-4
-        = f.input :action_subscription_booking, as: :boolean, :inline_label => true
-
 
   .content-container
     %h4= t('instance_admin.manage.service_types.calendar')
