--- a/app/assets/stylesheets/instance_admin/spam_reports.css.scss
+++ b/app/assets/stylesheets/instance_admin/spam_reports.css.scss
@@ -18,11 +18,20 @@
   }
 
   header {
-    display: none;
+    background: transparent;
+    .desc {
+      font-size: 16px;
+    }
   }
 
   section {
     footer {
+      display: none;
+    }
+  }
+
+  section > article {
+    header {
       display: none;
     }
   }
